Strike zone ball movement, team stats modal, slide nav, removing steals of home

--- a/app/modules/chooseTeams/styles/chooseTeams.less
+++ b/app/modules/chooseTeams/styles/chooseTeams.less
@@ -77,6 +77,27 @@
 			left: -230px;
 		}
 
+		.slide-nav-chevron {
+	    	cursor: pointer;
+	    	position: absolute;
+			top: 290px;
+			left: 13px;
+	    }
+
+	    .slide-nav-chevron > svg{
+			height: 50px;
+			width: 153px;
+		}
+
+	    .slide-nav-chevron-right {
+			left: 784px;
+		}
+
+	    .slide-nav-chevron-right > svg{
+			height: 105px;
+			width: 50px;
+		}
+
 		.player-on-field {
 			position: absolute;
 		    border-radius: 5px;
