--- a/app/modules/gamePlay/styles/gamePlay.less
+++ b/app/modules/gamePlay/styles/gamePlay.less
@@ -1,6 +1,7 @@
-@current-pitcher-alignment: 583px;
-@current-batter-alignment: 500px;
-@silhouette-position: 471px;
+@current-pitcher-alignment: 651px;
+@current-batter-alignment: 574px;
+@pitcher-silhouette-position: 509px;
+@batter-silhouette-position: 537px;
 @pitcher-silhouette-background-size: 106px;
 @batter-silhouette-background-size: 198px;
 @small-player-cap-width: 16.5px;
@@ -39,6 +40,7 @@
 	.table-styles;
     margin: 12px auto 0px;
     font-size: 17px;
+    cursor: pointer;
 
     td, th {
     	padding: 5px 4px;
@@ -48,6 +50,10 @@
 
     .highlight-cell {
     	 background-color: #dddddd;
+    }
+
+    .error-cell {
+    	position: relative;
     }
 }
 
@@ -151,7 +157,7 @@
 	}
 
 	.current-pitcher {
-		right: @current-pitcher-alignment;
+		left: @current-pitcher-alignment;
 	}
 
 	.current-batter {
@@ -165,8 +171,8 @@
 	}
 
 	.pitcher-left-aligned {
-		left: @current-pitcher-alignment;
-		right: auto;
+		left: auto;
+		right: @current-pitcher-alignment;
 	}
 
 	.batter-right-aligned {
@@ -181,33 +187,57 @@
 	    top: -41px;
 	}
 
+	.ball {
+    	width: @strike-zone-ball-size;
+	    height: @strike-zone-ball-size;
+	    border-radius: @strike-zone-ball-size;
+	    border: 2px solid;
+	    background-color: #ffffff;
+	    font-size: 10px;
+   		text-align: center;
+	    margin: 0px 5px 0px 10px;
+	    display: inline-block;
+    }
+
 	.batter-silhouette { 
 	    width: 200px;
 	    height: 250px;
 	    position: absolute;
 	    top: 262px;
+
+	    .hit-by-pitch-ball {
+	    	.ball;
+	    	font-family: sans-serif;
+	    	z-index: 1;
+	    	font-size: 10px;
+   		 	text-align: center;
+	    	position: absolute;
+	    	display: none;
+	    	-webkit-animation: animate-hit-bit-pitch 0.5s ease-in forwards;
+	    	animation: animate-hit-by-pitch 0.5s ease-in forwards;
+	    }
 	}
 
 	.R-handed-pitcher-silhouette {
-		right: @silhouette-position;
+		left: @pitcher-silhouette-position;
 		background: url('../img/R-pitcher-silhouette.png') no-repeat center;
 		background-size: @pitcher-silhouette-background-size;
 	}
 
 	.L-handed-pitcher-silhouette {
-		left: @silhouette-position;
+		right: @pitcher-silhouette-position;
 		background: url('../img/L-pitcher-silhouette.png') no-repeat center;
 		background-size: @pitcher-silhouette-background-size;
 	}
 
 	.R-handed-batter-silhouette {
-		left: @silhouette-position;
+		left: @batter-silhouette-position;
 		background: url('../img/R-batter-silhouette.png') no-repeat center;
 		background-size: @batter-silhouette-background-size;
 	}
 
 	.L-handed-batter-silhouette {
-		right: @silhouette-position;
+		right: @batter-silhouette-position;
 		background: url('../img/L-batter-silhouette.png') no-repeat center;
 		background-size: @batter-silhouette-background-size;
 	}
@@ -219,7 +249,7 @@
 	    top: 86px;
 	    margin: 0 auto;
 	    border: 2px solid #444444;
-	    background-color: rgba(255, 255, 255, 0.5);
+	    background-color: rgba(255, 255, 255, 0.7);
 	    z-index: 1;
 	    font-family: sans-serif;
 	    font-size: 12px;
@@ -259,34 +289,22 @@
 	    .legend-label {
 	    	display: inline-block;  
 		    position: relative;
-		    top: -3px;
+		    top: -4px;
 		    font-size: 10px;
-	    }
-
-	    .ball {
-	    	width: @strike-zone-ball-size;
-		    height: @strike-zone-ball-size;
-		    border-radius: @strike-zone-ball-size;
-		    background-color: #ffffff;
-		    border: 2px solid;
-		    margin: 0px 5px 0px 10px;
-		    display: inline-block;
 	    }
 
 	    .pitch-thrown-ball {
 	    	.ball;
-	    	font-size: 10px;
-   		 	text-align: center;
 	    	position: absolute;
 	    	display: none;
 	    	-webkit-animation-duration: 0.5s;
 	    	animation-duration: 0.5s;
-	    	-webkit-animation-timing-function: ease-in;
-	    	animation-timing-function: ease-in;
+	    	-webkit-animation-timing-function: ease-in forwards;
+	    	animation-timing-function: ease-in forwards;
 	    }
 
 	    .legend-top-row {
-	    	margin-bottom: 3px;    
+	    	margin-bottom: 2px;    
 	    }
 
 	    .called-ball {
@@ -431,7 +449,7 @@
 }
 
 .play-by-play-container {
-	margin-top: 40px;
+	margin-top: 50px;
 	font-family: sans-serif;
 
 	.header {
