--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -247,6 +247,10 @@
 	padding-right: 2px;
 }
 
+.auto-overflow {
+	overflow: auto;
+}
+
 .chosen-teams {
 	position: absolute;
 	top: 87px;
@@ -285,7 +289,7 @@
 
 .team-stats-info-icon {
 	.player-rating-info-icon;
-	top: 57px;
+	top: 56px;
 	left: 13px;
 	cursor: pointer;
 }
@@ -467,13 +471,14 @@
 	.team-stats-modal {
 		.player-info-modal;
 		margin: -13px auto;
-		width: 642px;
+		width: 682px;
 		height: 706px;
 
 		.team-stats-modal-table {
-			width: 616px;
+			width: 657px;
 			text-align: left;
 			margin-top: 10px;
+			padding-right: 0px;
 
 			th {
 				color: #ffffff;
