Reposition miscalled STRIKEs, highlight scoring plays and final score of winner
Also tweak throw to base logic and fix umpire call on non swing num

--- a/app/modules/chooseTeams/views/chooseTeams.html
+++ b/app/modules/chooseTeams/views/chooseTeams.html
@@ -13,7 +13,7 @@
 
 	<div class="app-welcome">
 	 	Welcome to <span class="emphasize-bold">LeagueHut Baseball</span>! <br>
-	 	Swipe through the teams and set your matchup by selecting two of them.
+	 	Check out the teams and set your matchup by selecting two of them.
 	</div>
 
 	<div class="chosen-teams" ng-show="chosenTeams.length">
