--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -317,6 +317,10 @@
 	margin-top: 0px !important;
 }
 
+.special-team-name-high-margin-top {
+	margin-top: -7px !important;
+}
+
 .player-info-modal-container {
 	display: none;
 	position: absolute;
