--- a/app/modules/gamePlay/styles/gamePlay.less
+++ b/app/modules/gamePlay/styles/gamePlay.less
@@ -10,7 +10,7 @@
 @called-ball-color: #ff0000;
 @called-strike-color: #00ff00;
 @swinging-strike-color: #000000;
-@put-into-play-color: #fec43b;
+@action-color: #fec43b;
 @foul-color: #aaaaaa;
 @hit-by-pitch-color: #0000ff;
 
@@ -65,6 +65,18 @@
 
     .error-cell {
     	position: relative;
+    }
+
+    .inning {
+    	font-weight: 600;
+    }
+
+    .current-inning {
+    	background-color: #eeeeee;
+    }
+
+    .winning-score {
+    	background-color: @action-color;
     }
 }
 
@@ -348,13 +360,13 @@
 	    }
 
 	    .put-into-play {
-	    	border-color: @put-into-play-color;
-	    	margin-left: 41px;
+	    	border-color: @action-color;
+	    	margin-left: 42px;
 	    }
 
 	    @keyframes animate-put-into-play {
 	    	from {border-color: #ffffff;}
-	    	to {border-color: @put-into-play-color;}
+	    	to {border-color: @action-color;}
 	    }
 
 	    .foul {
@@ -403,6 +415,7 @@
 
 .player-box-score {
 	.table-styles;
+	border-radius: 5px;
 	margin-top: 54px;
 	margin-left: 12px;
 	margin-bottom: 10px;
@@ -578,15 +591,15 @@
 
 			.play-call-announcement {
 				margin-bottom: 15px;
-				left: 640px;
+				left: 694px;
 			}
 
 			.end-full-inning {
-				left: 648px;
+				left: 702px;
 			}
 
 			.game-over-call {
-				left: 682px;
+				left: 685px;
 			}
 
 			.play-call {
@@ -607,6 +620,11 @@
 			border: none;
 			margin-bottom: 0px;
 		}
+
+		.scoring-play {
+	    	color: @action-color;
+    		font-weight: 800;
+	    }
 
 		.play > div {
 			display: inline-block;
