--- a/app/modules/gamePlay/styles/gamePlay.less
+++ b/app/modules/gamePlay/styles/gamePlay.less
@@ -13,6 +13,7 @@
 @action-color: #fec43b;
 @foul-color: #aaaaaa;
 @hit-by-pitch-color: #0000ff;
+@big-things-color: #bdb200;
 
 .game-play {
 	min-width: 1400px;
@@ -76,7 +77,7 @@
     }
 
     .winning-score {
-    	background-color: @action-color;
+    	background-color: @big-things-color;
     }
 }
 
@@ -622,7 +623,7 @@
 		}
 
 		.scoring-play {
-	    	color: @action-color;
+	    	color: @big-things-color;
     		font-weight: 800;
 	    }
 
