--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -307,6 +307,7 @@
 	font-size: 33px !important;
     display: inline;
     letter-spacing: normal !important;
+    cursor: pointer;
 }
 
 .special-team-name-small {
