--- a/app/modules/gamePlay/views/gamePlay.html
+++ b/app/modules/gamePlay/views/gamePlay.html
@@ -24,7 +24,7 @@
 			<tr>
 				<td class="emphasize-boldest">{{::$ctrl.gameTeams[0].name}}</td>
 				<td ng-repeat="(key, value) in $ctrl.gameTeams[0].inningScores" ng-class="{'current-inning': !$ctrl.gameIsOver && (key == $ctrl.baseInning)}">{{value}}</td>
-				<td ng-class="{'winning-score': $ctrl.gameIsOver && ($ctrl.gameTeams[0].id === $ctrl.winningTeam.id)}">{{$ctrl.gameTeams[0].battingTotals.totalRuns}}</td>
+				<td class="emphasize-boldest" ng-class="{'winning-score': $ctrl.gameIsOver && ($ctrl.gameTeams[0].id === $ctrl.winningTeam.id)}">{{$ctrl.gameTeams[0].battingTotals.totalRuns}}</td>
 				<td>{{$ctrl.gameTeams[0].battingTotals.totalHits}}</td>
 				<td>{{$ctrl.gameTeams[0].totalErrors}}</td>
 			</tr>
@@ -32,7 +32,7 @@
 			<tr>
 				<td class="emphasize-boldest">{{::$ctrl.gameTeams[1].name}}</td>
 				<td ng-repeat="(key, value) in $ctrl.gameTeams[1].inningScores" ng-class="{'current-inning': !$ctrl.gameIsOver && (key == $ctrl.baseInning)}">{{value}}</td>
-				<td ng-class="{'winning-score': $ctrl.gameIsOver && ($ctrl.gameTeams[1].id === $ctrl.winningTeam.id)}">{{$ctrl.gameTeams[1].battingTotals.totalRuns}}</td>
+				<td class="emphasize-boldest" ng-class="{'winning-score': $ctrl.gameIsOver && ($ctrl.gameTeams[1].id === $ctrl.winningTeam.id)}">{{$ctrl.gameTeams[1].battingTotals.totalRuns}}</td>
 				<td>{{$ctrl.gameTeams[1].battingTotals.totalHits}}</td>
 				<td>{{$ctrl.gameTeams[1].totalErrors}}</td>
 			</tr>
@@ -209,7 +209,7 @@
 	<!-- PLAYER BOX SCORES -->
 	<div class="auto-overflow">
 		<div ng-repeat="team in $ctrl.gameTeams" class="player-box-scores" ng-class="{'right-team': !$first}">
-			<div class="team-{{team.id}}-font box-score-team-name team-{{team.id}}-box-score-name-margin" 
+			<div class="team-{{team.id}}-font box-score-team-name team-{{team.id}}-box-score-name-margin" ng-click="$ctrl.showTeamStatsModal()"
 				ng-class="{'special-team-name-small': (team.id === 8), 'special-team-name-no-margin-top': (team.id === 7), 'special-team-name-high-margin-top': (team.id === 1)}">
 		 		{{::team.name}}
 		 	</div>
@@ -311,9 +311,11 @@
 						<div>{{::play.batter.lastName}}</div>
 					</div>
 				</div>
-				<div class="play-spacing play-call" 
-					  ng-class="{'move-play-call-up': play.playCallPartTwo, 'play-call-announcement': play.announcement, 'end-full-inning': play.fullInningEnded, 'game-over-call': play.gameOver, 'scoring-play': play.scoringPlay}">
-					{{::play.playCall}}
+				<div ng-class="{'announcement-container': play.announcement}">
+					<div class="play-spacing play-call" 
+						  ng-class="{'move-play-call-up': play.playCallPartTwo, 'play-call-announcement': play.announcement, 'end-full-inning': play.fullInningEnded, 'scoring-play': play.scoringPlay}">
+						{{::play.playCall}}
+					</div>
 				</div>
 				<div class="play-spacing play-call play-call-part-two" ng-class="{'scoring-play': play.scoringPlay}" ng-if="play.playCallPartTwo">
 					{{::play.playCallPartTwo}}
